--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+    <header>
+        <nav>
+            <form action="/log-out" method="post">
+                <button type="submit">Log out</button>
+            </form>
+        </nav>
+    </header>
+
     <main>
         {% block content %}
         {% endblock content %}
