--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <h1>Welcome to guess the secret number game</h1>
+    <h1>Guess the secret number</h1>
     <a href="/register">Register</a>
     <a href="/login">Login</a>
 
