--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-    <h1>Guess the secret number</h1>
-    <a href="/register">Register</a>
-    <a href="/login">Login</a>
+    <div class="container">
+        <h1>Guess the secret number</h1>
+    </div>
 
 {% endblock content %}
