--- a/templates/login.html
+++ b/templates/login.html
@@ -4,19 +4,21 @@
 
 {% block content %}
 
-    {% if incorrect_password %}
-        <p>Your password is incorrect, please try again.</p>
-    {% endif %}
-    <form action="/login" method="post">
-        <div class="username">
-            <label for="correct-username">Enter your username</label>
-            <input type="text" id="correct-username" name="username" autofocus>
-        </div>
-        <div class="password">
-            <label for="correct-password">Enter your password</label>
-            <input type="password" id="correct-password" name="password">
-        </div>
-        <button type="submit">Login</button>
-    </form>
+    <div class="container">
+        {% if incorrect_password %}
+            <p>Your password is incorrect, please try again.</p>
+        {% endif %}
+        <form action="/login" method="post">
+            <div class="username">
+                <label for="correct-username">Enter your username</label>
+                <input type="text" id="correct-username" name="username" autofocus>
+            </div>
+            <div class="password">
+                <label for="correct-password">Enter your password</label>
+                <input type="password" id="correct-password" name="password">
+            </div>
+            <button type="submit">Login</button>
+        </form>
+    </div>
 
 {% endblock content %}
