--- a/templates/register.html
+++ b/templates/register.html
@@ -4,29 +4,33 @@
 
 {% block content %}
 
-    <form action="/register" method="post">
-        <div class="first_name">
-            <label for="first-name">Enter your first name: </label>
-            <input type="text" id="first-name" name="first-name" autofocus>
-        </div>
-        <div class="last_name">
-            <label for="last-name">Enter your last name: </label>
-            <input type="text" id="last-name" name="last-name">
-        </div>
-        <div class="email">
-            <label for="email">Enter your email</label>
-            <input type="email" id="email" name="email">
-        </div>
-        <div class="username">
-            <label for="username">Enter your username</label>
-            <input type="text" id="username" name="username">
-        </div>
-        <div class="password">
-            <label for="password">Enter your password</label>
-            <input type="password" id="password" name="password">
-        </div>
-        <button type="submit">Register</button>
-        <a href="/login">Login</a>
-    </form>
+    <div class="container">
+        <form action="/register" method="post">
+            <div class="first_name">
+                <label for="first-name">Enter your first name: </label>
+                <input type="text" id="first-name" name="first-name" autofocus>
+            </div>
+            <div class="last_name">
+                <label for="last-name">Enter your last name: </label>
+                <input type="text" id="last-name" name="last-name">
+            </div>
+            <div class="email">
+                <label for="email">Enter your email</label>
+                <input type="email" id="email" name="email">
+            </div>
+            <div class="username">
+                <label for="username">Enter your username</label>
+                <input type="text" id="username" name="username">
+            </div>
+            <div class="password">
+                <label for="password">Enter your password</label>
+                <input type="password" id="password" name="password">
+            </div>
+            <div class="register-login-option">
+                <button type="submit">Register</button>
+                <a href="/login">Login</a>
+            </div>
+        </form>
+    </div>
 
 {% endblock content %}
