--- a/static/base.css
+++ b/static/base.css
@@ -25,18 +25,13 @@ nav{
     box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
 }
 
-a{
+nav a{
     margin-left: 10px;
     text-decoration: none;
     text-transform: uppercase;
     color: #fff;
     transition: 0.3s ease all;
 }
-
-a:hover{
-    text-decoration: underline;
-}
-
 
 h1{
     text-transform: uppercase;
@@ -45,11 +40,84 @@ h1{
 .container{
     background-color: rgba(0, 0, 0, 0.3);
     box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
-    padding: 20px;
+    padding: 30px 45px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 
 form{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
+
+input{
+    outline: none;
+    border: none;
+    padding: 5px 44px;
+    width: 100%;
+    background-color: transparent;
+    border-bottom: 3px solid #ffffff;
+    color: #fff;
+    text-align: center;
+}
+
+input::-webkit-input-placeholder{
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.34);
+    font-size: 14px;
+}
+
+form h1{
+    margin: 8px 0;
+}
+
+
+form div{
+    margin: 10px 0;
+}
+
+form label{
+    font-size: 18px;
+}
+
+.button{
+    margin-top: 20px;
+    border: none;
+    border-bottom: 2px solid #fff;
+    border-top: 2px solid #fff;
+    padding: 7px 23px;
+    outline: none;
+    color: #fff;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-color: transparent;
+}
+
+.button:hover{
+    cursor: pointer;
+}
+
+.link{
+    align-self: flex-end;
+    margin-right: 10px;
+    font-size: 14px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.link:hover{
+    text-decoration: underline;
+}
+
+.guess p{
+    margin-top: 12px;
+}
+
+
+
