--- a/templates/game.html
+++ b/templates/game.html
@@ -6,11 +6,9 @@
 
     <div class="container">
         <form action="/secret-number" method="post">
-            <div class="secret-number">
-                <label for="secret-number">Number is between 1 and 30!</label>
-                <input type="text" id="secret-number" name="user-guess">
-            </div>
-            <button type="submit">Submit</button>
+            <h1>Number is between 1 and 30!</h1>
+            <input type="text" id="secret-number" name="user-guess" placeholder="Enter your guess" autofocus>
+            <button class="button" type="submit">Submit</button>
         </form>
     </div>
 
