--- a/templates/guess.html
+++ b/templates/guess.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %} Guess check {% endblock title %}
+{% block title %}Guess check{% endblock title %}
 
 {% block content %}
 
-  <div class="container">
+  <div class="container guess">
       {% if guess_is_correct %}
 
         <h1>Congratulation!</h1>
@@ -13,8 +13,8 @@
 
       {% else %}
 
-        <p>Your guess is incorrect!</p>
-        <p>Your guess: {{guess}}</p>
+        <h1>Wrong guess!</h1>
+        <p>Your last guess: {{guess}}</p>
 
         {% if secret_number > guess %}
 
@@ -25,7 +25,7 @@
           <p>Try something smaller!</p>
 
         {% endif %}
-        <a href="/">Try again!</a>
+        <a class="link" href="/">Try again!</a>
       {% endif %}
   </div>
 {% endblock content %}
