--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Profile{% endblock title %}
-
 {% block content %}
 
     <div class="container">
         <h1>Profile</h1>
-        <p>Name: {{user.first_name}}  {{user.last_name}}</p>
+        <p>Username: {{user.username}}</p>
+        <p>Name: {{user.first_name}} {{user.last_name}}</p>
         <p>Email: {{user.email}}</p>
-        <a href="/logout">Logout</a>
+        <a class="link" href="/logout">Logout</a>
     </div>
 
 {% endblock content %}
