--- a/templates/guess.html
+++ b/templates/guess.html
@@ -9,7 +9,7 @@
 
         <h1>Congratulation!</h1>
         <p>You've guessed it!</p>
-        <a href="/">Play again</a>
+        <a class="link" href="/">Play again</a>
 
       {% else %}
 
