--- a/templates/login.html
+++ b/templates/login.html
@@ -5,20 +5,26 @@
 {% block content %}
 
     <div class="container">
-        {% if incorrect_password %}
-            <p>Your password is incorrect, please try again!</p>
-        {% elif incorrect_username %}
-            <p>You've entered incorrect username, please try again!</p>
-        {% endif %}
+
         <form action="/login" method="post">
+
             <h1>Login</h1>
-            <div class="username">
-                <label for="correct-username"></label>
-                <input type="text" id="correct-username" name="username" placeholder="username" autofocus>
-            </div>
-            <div class="password">
-                <label for="correct-password"></label>
-                <input type="password" id="correct-password" placeholder="password" name="password">
+
+            {% if incorrect_password %}
+                <p>Your password is incorrect, please try again!</p>
+            {% elif incorrect_username %}
+                <p>You've entered incorrect username, please try again!</p>
+            {% endif %}
+
+            <div class="user-input">
+                <div class="username">
+                    <label for="correct-username"></label>
+                    <input type="text" id="correct-username" name="username" placeholder="username" autofocus>
+                </div>
+                <div class="password">
+                    <label for="correct-password"></label>
+                    <input type="password" id="correct-password" placeholder="password" name="password">
+                </div>
             </div>
             <button class="button" type="submit">Login</button>
         </form>
