--- a/static/base.css
+++ b/static/base.css
@@ -47,6 +47,10 @@ h1{
     align-items: center;
 }
 
+.user-input{
+    margin: 15px 0;
+}
+
 
 form{
     display: flex;
@@ -64,6 +68,7 @@ input{
     border-bottom: 3px solid #ffffff;
     color: #fff;
     text-align: center;
+    font-size: 18px;
 }
 
 input::-webkit-input-placeholder{
@@ -86,7 +91,6 @@ form label{
 }
 
 .button{
-    margin-top: 20px;
     border: none;
     border-bottom: 2px solid #fff;
     border-top: 2px solid #fff;
