--- a/templates/register.html
+++ b/templates/register.html
@@ -8,29 +8,46 @@
 
         <h1>Register</h1>
 
+        {% if user_already_exists %}
+            <p>You've entered username that already exists.</p>
+            <p>Please try something else!</p>
+
+        {% elif incorrect_password %}
+            <p>Wrong password!</p>
+            <p>Please try again!</p>
+        {% endif %}
+
         <form action="/register" method="post">
 
+            <div class="user-input">
 
-            <div class="first_name">
-                <label for="first-name"></label>
-                <input type="text" id="first-name" name="first-name" placeholder="first name" autofocus>
+                <div class="first_name">
+                    <label for="first-name"></label>
+                    <input type="text" id="first-name" name="first-name" placeholder="first name" autofocus>
+                </div>
+                <div class="last_name">
+                    <label for="last-name"></label>
+                    <input type="text" id="last-name" name="last-name" placeholder="last name">
+                </div>
+                <div class="email">
+                    <label for="email"></label>
+                    <input type="email" id="email" name="email" placeholder="email">
+                </div>
+                <div class="username">
+                    <label for="username"></label>
+                    <input type="text" id="username" name="username" placeholder="username">
+                </div>
+                <div class="password">
+                    <label for="password"></label>
+                    <input type="password" id="password" name="password" placeholder="password">
+                </div>
+                <div class="password">
+                    <label for="password-check"></label>
+                    <input type="password" id="password-check" name="password-check" placeholder="password">
+                </div>
+
             </div>
-            <div class="last_name">
-                <label for="last-name"></label>
-                <input type="text" id="last-name" name="last-name" placeholder="last name">
-            </div>
-            <div class="email">
-                <label for="email"></label>
-                <input type="email" id="email" name="email" placeholder="email">
-            </div>
-            <div class="username">
-                <label for="username"></label>
-                <input type="text" id="username" name="username" placeholder="username">
-            </div>
-            <div class="password">
-                <label for="password"></label>
-                <input type="password" id="password" name="password" placeholder="password">
-            </div>
+
             <div class="register-button">
                 <span class="before"></span>
                 <span class="after"></span>
@@ -40,6 +57,7 @@
             <a class="link" href="/login">Login</a>
 
         </form>
+
     </div>
 
 {% endblock content %}
