--- a/templates/guess.html
+++ b/templates/guess.html
@@ -16,7 +16,7 @@
         <h1>Wrong guess!</h1>
         <p>Your last guess: {{guess}}</p>
 
-        {% if secret_number > guess %}
+        {% if user.secret_number > guess %}
 
           <p>Try something bigger!</p>
 
