--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
             {% if user %}
                 <a href="/">Secret number</a>
                 <a href="/profile">Profile</a>
+                <a href="/leaderboard">leaderboard</a>
             {% else %}
                 <a href="/register">Register</a>
                 <a href="/login">Login</a>
