--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Profile{% endblock title %}
+
 {% block content %}
 
     <div class="container">
@@ -8,6 +10,7 @@
         <p>Username: {{user.username}}</p>
         <p>Name: {{user.first_name}} {{user.last_name}}</p>
         <p>Email: {{user.email}}</p>
+        <p>Best score : {{user.best_score}}</p>
 
         <div class="links">
             <a class="link" href="/change-password">Change password</a>
