cant covert float, bug fixed

--- a/templates/guess.html
+++ b/templates/guess.html
@@ -25,7 +25,9 @@
           <p>Try something smaller!</p>
 
         {% endif %}
-        <a class="link" href="/">Try again!</a>
+          <div class="try-again">
+            <a class="link" href="/">Try again!</a>
+          </div>
       {% endif %}
   </div>
 {% endblock content %}
