required guess, bug fixed

--- a/templates/game.html
+++ b/templates/game.html
@@ -22,7 +22,7 @@
             {% endif %}
 
             <div class="user-input">
-                <input type="text" id="secret-number" name="user-guess" placeholder="Enter your guess" autofocus>
+                <input type="text" id="secret-number" name="user-guess" placeholder="Enter your guess" autofocus required>
             </div>
 
             <button class="button" type="submit">Submit</button>
