see all usre, option added

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -6,7 +6,7 @@
 
     <div class="container">
 
-        <form action="/change-password" method="post">
+        <form action="/profile/change-password" method="post">
 
             <h1>Change password</h1>
 
