--- a/static/base.css
+++ b/static/base.css
@@ -23,7 +23,7 @@ nav{
     width: 100%;
 
     padding: 15px;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.35);
     box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
 }
 
@@ -47,6 +47,8 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin: 12px;
 }
 
 .user-input{
