--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../static/base.css">
-    <title>{% block title %} Default title {% endblock title %} </title>
+    {% block head %}
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+        <title>{% block title %} Default title {% endblock title %} </title>
+    {% endblock head %}
 </head>
 <body>
 
@@ -16,6 +18,7 @@
                 <a href="/">Secret number</a>
                 <a href="/profile">Profile</a>
                 <a href="/leaderboard">leaderboard</a>
+                <a href="/users">Users</a>
             {% else %}
                 <a href="/register">Register</a>
                 <a href="/login">Login</a>
