--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
             {% if incorrect_password %}
                 <p>Your password is incorrect, please try again!</p>
             {% elif incorrect_username %}
-                <p>You've entered incorrect username, please try again!</p>
+                <p>You have entered incorrect username, please try again!</p>
             {% endif %}
 
             <div class="user-input">
