--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -11,13 +11,13 @@
             <h1>Change password</h1>
 
             {% if incorrect_password %}
-                <p>You've entered wrong password.</p>
+                <p>You have entered wrong password.</p>
                 <p>Please try again!</p>
             {% elif too_short_password %}
                 <p>Your new password is too short.</p>
                 <p>Please try again!</p>
             {% elif incorrect_re_entered_password %}
-                <p>When re-entering your new password, you've made a mistake.</p>
+                <p>When re-entering your new password, you have made a mistake.</p>
                 <p>Please try again!</p>
             {% endif %}
 
