--- a/templates/guess.html
+++ b/templates/guess.html
@@ -8,7 +8,7 @@
       {% if guess_is_correct %}
 
         <h1>Congratulation!</h1>
-        <p>You've guessed it!</p>
+        <p>You have guessed it!</p>
         <a class="link" href="/">Play again</a>
 
       {% else %}
