--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,8 +2,8 @@
 
 {% block head %}
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='profile.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
 
 {% endblock head %}
 
@@ -12,14 +12,19 @@
 {% block content %}
 
     <div class="profile-main">
-        <img src="../static/male-blank-profile-picture.jpg" alt="Profile picture">
+        <img src="../static/images/male-blank-profile-picture.jpg" alt="Profile picture">
         <h1>{{user.first_name}} {{user.last_name}}</h1>
     </div>
 
     <div class="container">
+        <h3>basic info</h3>
         <p>Username: {{user.username}}</p>
         <p>Email: {{user.email}}</p>
-        <p>Best score : {{user.best_score}}</p>
+
+        {% if user.best_score is not None %}
+            <p>Best score : {{user.best_score}}</p>
+        {% endif %}
+
     </div>
 
     <div class="container">
@@ -29,4 +34,5 @@
             <a class="link" href="/profile/delete-profile">Delete profile</a>
         </div>
     </div>
+
 {% endblock content %}
