--- a/templates/users.html
+++ b/templates/users.html
@@ -11,7 +11,7 @@
 
 
     {% for user in users.items %}
-        <div class="container">
+        <div class="container links">
 
             <img src="../static/images/male-blank-profile-picture.jpg" alt="profile image">
 
